# insightpkg

./: pyproject.toml
.github/workflows/: python-publish.yml
