[project]
name = "insightpkg"
version = "0.1.1"
description = "A simple CLI tool to fetch metadata from PyPI"
authors = [
    { name = "Mayank", email = "n/a" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests"]

[project.scripts]
insightpkg = "insightpkg.cli:main"

[build-system]
requires = ["uv"]
build-backend = "uv.build"
